--- a/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Hands-on Exercise 1"
 author: "Kai Feng"
+date: "August 19, 2024"
+date-modified: "last-modified"
 ---
 
 # **1.0 Overview**
