Commit after editing Hands-on Exercise 2

--- a/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Hands-on Exercise 1"
+subtitle: "Geospatial Data Wrangling with R!"
 author: "Kai Feng"
 date: "August 17, 2024"
 date-modified: "last-modified"
