--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "VAA"
+title: "IS455"
 ---
 
-Welcome to **ISSS608 Visual Analytics and Applications**. In this website, you will find my coursework prepared for this course.
+Welcome to **IS455 Geospatial Analytics and Application**. In this website, you will find my coursework prepared for this course.
