Add: Hands-on exercise 6

--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -5,7 +5,7 @@ author: "Kai Feng"
 date: "August 30, 2024"
 date-modified: "last-modified"
 execute:
-  eval: true
+  eval: false
   echo: true
   freeze: true
 ---
